--- a/Finnish/main/Provision.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Provision.apk/res/values-fi-rFI/strings.xml
@@ -72,7 +72,7 @@ Näytä valitun näppäimistön Tietosuojakäytäntö."</string>
   <string name="sim_redetection">Tarkista uudelleen</string>
   <string name="sim_scard_detecting_check_mobile_not_available">SIM-korttisi ei voinut yhdistää toimivaan operaattorin verkkoon. Varmista, että datapaketissasi on tarpeeksi saldoa ja yritä yhdistää uudelleen.</string>
   <string name="skip_underline">Ohita tämä vaihe</string>
-  <string name="start_up_slogan">Paras kokonäytön kokemus</string>
+  <string name="start_up_slogan">Suunniteltu koko näytön kokemukselle</string>
   <string name="summary_not_set">Ei asetettu</string>
   <string name="system_navigation_mode">Järjestelmän navigointitila</string>
   <string name="terms_of_use">Käyttöehdot</string>
