--- a/Finnish/main/InCallUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/InCallUI.apk/res/values-fi-rFI/strings.xml
@@ -81,6 +81,7 @@
   <string name="close_camera_requesting">Poistetaan kamera käytöstä…</string>
   <string name="conference_call_description" formatted="false">%s,%s jne. yhteensä %s</string>
   <string name="conference_call_number">%s henkilöä</string>
+  <string name="conference_call_recorder_title">Konferenssipuhelu</string>
   <string name="conference_call_single_description" formatted="false">%s jne. yhteensä %s</string>
   <string name="conference_caller_info_name">%1$s konferenssipuhelu</string>
   <string name="conference_callers_exceeded">Henkilöitä ei voi lisätä enempää</string>
