--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -955,13 +955,19 @@ Siirtonopeus"</string>
   <string name="bootloader_apply_step_5">Varmista, että tiedät miten Fastboot-tilaa käytetään, ennen kuin otat sen käyttöön.</string>
   <string name="bootloader_apply_title">Tärkeä varoitus</string>
   <string name="bootloader_device_bind_already">Lisättiin onnistuneesti. Mi Tili on nyt liitettynä tämän laitteen kanssa.</string>
+  <string name="bootloader_device_bind_exceed_sim_limit">Tälle SIM-kortille ei voi lisätä enempää tilejä.</string>
   <string name="bootloader_device_bind_fail">Vahvistaminen epäonnistui, odota minuutti tai kaksi ja yritä uudelleen</string>
   <string name="bootloader_device_bind_msg">Valmistellaan lisäämään tiliä ja laitetta…</string>
   <string name="bootloader_device_bind_no_account">Kirjaudu Mi Tilillesi ensin</string>
   <string name="bootloader_device_bind_no_network">Yhdistä verkkoon ja yritä uudelleen</string>
+  <string name="bootloader_device_bind_no_sim">Aseta SIM-kortti ja yritä uudelleen.</string>
+  <string name="bootloader_device_bind_server_code">Ei voitu lisätä. Virhekoodi:</string>
+  <string name="bootloader_device_bind_sim_invalid">SIM-kortti on virheellinen. Korvaa se uudella ja yritä uudelleen.</string>
   <string name="bootloader_locked_answer_1">Lukitsemme laitteet varmistaaksemme, että ne on ovat turvassa ja ettei henkilökohtaiset tietosi jaeta kolmansille osapuolille. Jos sinun täytyy päästä Fastboot tilaan ja asentaa laitteesi, voit avata lukon.</string>
   <string name="bootloader_locked_answer_1_warning">Muista: Et voi käyttää \"Etsi laite\" ominaisuutta puhelimen lukituksen avaamisen jälkeen.</string>
-  <string name="bootloader_locked_answer_2">Napauta alla olevaa painiketta liittääksesi Mi Tilisi tämän laitteen kanssa. Sitten mene MIUI verkkosivuilla ja lataa unlock tool ja asenna se tietokoneellesi. Tässä on osoite:</string>
+  <string name="bootloader_locked_answer_2">"1. Varmista, että olet asettanut jo SIM-kortin laitteeseesi.
+2. Napauta \"Lisää tili\" painiketta alapuolella liittääksesi Mi Tilisi tähän laitteeseen.
+3. Lataa lukituksen poistotyökalu verkkosivuiltamme. Huomaa, että sinun täytyy poistaa laitteiden lukitus tietokoneella. Lataa täältä:"</string>
   <string name="bootloader_locked_check_status">Lisää tili ja laite</string>
   <string name="bootloader_locked_question_1">Miksi laitteiden täytyy olla lukittu?</string>
   <string name="bootloader_locked_question_2">Ymmärrän riskit, mutta haluan silti avata laitteeni lukituksen.</string>
@@ -969,6 +975,11 @@ Siirtonopeus"</string>
   <string name="bootloader_status_locked">Lukittu</string>
   <string name="bootloader_status_locked_info">Tämä laite on lukittu</string>
   <string name="bootloader_status_locked_summary">Puhelin on turvassa</string>
+  <string name="bootloader_status_privacy_dialog_message">Mi Unlockin tulee saada Mi Tilisi, CPU ID:si, IMEI:si, IMSI:si käyttöoikeus toimiakseen oikein. Keräämme, käytämme ja käsittelemme tietojasi %s mukaisesti. Hyväksytkö?</string>
+  <string name="bootloader_status_privacy_dialog_no">Peruuta</string>
+  <string name="bootloader_status_privacy_dialog_title">Käyttöoikeuksia vaaditaan</string>
+  <string name="bootloader_status_privacy_dialog_url_text">Tietosuojakäytäntö</string>
+  <string name="bootloader_status_privacy_dialog_yes">Hyväksyn</string>
   <string name="bootloader_status_summary">Tarkista onko laite lukittu</string>
   <string name="bootloader_status_unlocked">Lukitus avattu</string>
   <string name="bootloader_status_unlocked_info">Tämä laitteen lukitus on avattu</string>
@@ -1508,8 +1519,9 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="device_internal_memory">Sisäinen tallennustila</string>
   <string name="device_memory">RAM</string>
   <string name="device_miui_more">Näytä lisää</string>
-  <string name="device_miui_version">MIUI versio</string>
-  <string name="device_miui_version_update">MIUI päivitys on saatavilla</string>
+  <string name="device_miui_version">MIUI-versio</string>
+  <string name="device_miui_version_for_POCO">MIUI-versio (POCO)</string>
+  <string name="device_miui_version_update">MIUI-päivitys on saatavilla</string>
   <string name="device_name">Laitteen nimi</string>
   <string name="device_name_input_error">Laitteen nimeä ei voitu tallentaa</string>
   <string name="device_name_input_hint">Syötä nimi</string>
@@ -2763,8 +2775,6 @@ Tällä laitteella on muita paikalla olevia käyttäjiä.
   <string name="miui_lab_gallery_search_title">Etsi kuvia Galleriassa</string>
   <string name="miui_lab_settings">MIUI lab</string>
   <string name="miui_lab_slogan">Opi. Tutki. Löydä.</string>
-  <string name="miui_lab_taplus_desc">Pidä pohjassa kohteita käynnistääksesi toimintoja</string>
-  <string name="miui_lab_taplus_title">Taplus</string>
   <string name="miui_master_clear_summary">Poistaa kaikki tiedot puhelimesta</string>
   <string name="miui_touch_filtered_warning">Jos sovellus estää käyttöoikeusikkunan, raahaa päällä oleva kohde pois edestä tai sulje sovellus.</string>
   <string name="miui_updater">Järjestelmän päivitys</string>
@@ -4752,6 +4762,7 @@ Se on Googlen tapa synkronoida tietoja, ja sen avulla voit käyttää yhteystiet
   <string name="talkback_title">TalkBack</string>
   <string name="tap_to_wake">Herätä napauttamalla</string>
   <string name="tap_to_wake_summary">Herätä laite napauttamalla näyttöä kahdesti.</string>
+  <string name="taplus_title">Taplus</string>
   <string name="telephony_monitor_switch">Puhelinpalvelujen seuranta</string>
   <string name="telephony_monitor_switch_summary">Puhelinpalvelujen seuranta kerää tietoja virheistä puhelinpalvelujen tai modeemin toiminnassa ja kehottaa käyttäjää tekemään virheilmoituksen.</string>
   <string name="telephony_monitor_toast">Käynnistä laite uudelleen, niin puhelinpalvelujen seurannan muutokset astuvat voimaan.</string>
